# python-starter-template

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml
.vim/: coc-settings.json
scripts/: check  check-code  check-format  format  test  test-watch-mode
