[project]
name = "python-starter-template"
version = "0.1.0"
description = "Starter template for Python projects"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.uv]
exclude-newer = "3 days"
